--- a/src/db-migration-service/pom.xml
+++ b/src/db-migration-service/pom.xml
@@ -90,7 +90,8 @@
                     <exclude>module-info.class</exclude>
                     <exclude>META-INF/*</exclude>
                     <exclude>META-INF/versions/**</exclude>
-                    <exclude>META-INF/services/**</exclude>
+                    <!-- Liquibase stores necessary artifacts in this location -->
+                    <!-- <exclude>META-INF/services/**</exclude> -->
                 </excludes>
             </filter>
           </filters>
